--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,6 @@
 .container {
     text-align: center;
+   
 }
 
 #hiddenWord {
@@ -12,4 +13,10 @@
 
 .display-4 {
     font-size: 84px;
+}
+
+img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
